[project]
name = "hf-agents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "google-search-results>=2.4.2",
    "gradio>=5.18.0",
    "helium>=5.1.1",
    "huggingface-hub>=0.28.1",
    "kaleido==0.2.0",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "matplotlib>=3.10.0",
    "openinference-instrumentation-smolagents>=0.1.6",
    "opentelemetry-exporter-otlp>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "pydantic-settings>=2.7.1",
    "rank-bm25>=0.2.2",
    "ruff>=0.9.6",
    "selenium>=4.29.0",
    "shapely>=2.0.7",
    "smolagents[all,litellm]>=1.9.2",
    "transformers>=4.48.3",
]
